--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: #58CFFF;
-  border-color: #58CFFF;
+  background-color: black;
+  border-color: black;
 }
 
 .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
@@ -8,18 +8,18 @@
 }
 
 .navbar-default .navbar-nav > li > a {
-  color: black;
+  color: white;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #58CFFF;
+  background-color: black;
 }
 
 .navbar-header button, .navbar-default .navbar-toggle, .navbar-default .navbar-toggle:focus {
-  border-color: #58CFFF;
-  background-color: #58CFFF;
+  border-color: black;
+  background-color: black;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
