--- a/app/styles/_global-styles.scss
+++ b/app/styles/_global-styles.scss
@@ -87,6 +87,15 @@ li {
   font-size: 15pt;
 }
 
+.quote p {
+  height: 15px;
+  width: 100%;
+  margin: auto;
+  padding: 0;
+  font-family: 'Cinzel', serif;
+  font-size: 70pt;
+}
+
 /* Skills ------------------------- */
 
 .skills {
