--- a/app/styles/_global-styles.scss
+++ b/app/styles/_global-styles.scss
@@ -84,16 +84,17 @@ li {
   margin-top: 50px;
   padding: 50px;
   color: white;
-  font-size: 15pt;
+  font-size: 24pt;
 }
 
 .quote p {
-  height: 15px;
-  width: 100%;
+  height: 40px;
+  width: 30px;
   margin: auto;
+  margin-top: 30px;
   padding: 0;
   font-family: 'Cinzel', serif;
-  font-size: 70pt;
+  font-size: 100pt;
 }
 
 /* Skills ------------------------- */
