--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,3 +15,6 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 //collapse-well-styles
 @import "collapse-styles";
+
+//shuffleJS styles
+@import "shuffle-styles";
