Got shuffle up and running

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,5 +16,5 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 //collapse-well-styles
 @import "collapse-styles";
 
-//shuffleJS styles
+//Shuffle JS styles
 @import "shuffle-styles";
